<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.swyam.remoteimageprocessing.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sett_ip_address_server"
                    android:textSize="25sp"
                    android:textAlignment="center"/>

                <EditText
                    android:layout_margin="10dp"
                    android:background="@drawable/shape"
                    android:id="@+id/edit_text_ip_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:hint="@string/sett_example_192_168_10_1"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sett_port_server"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    />

                <EditText
                    android:id="@+id/edit_text_port_server"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:hint="@string/sett_example_4403"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sett_my_port"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    />

                <EditText
                    android:id="@+id/edit_text_my_port"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:hint="@string/sett_example_3033"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sett_wait_answer_limit"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    />

                <EditText
                    android:id="@+id/edit_text_limit_wait_answer"
                    android:layout_margin="10dp"
                    android:background="@drawable/shape"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:hint="@string/sett_seconds"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_save_settings"
                    android:background="@drawable/custom_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="25sp"
                    android:textAllCaps="false"
                    android:text="@string/standard_save"/>


            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>
