<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view_preview_thumb_dialog"
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_menu_gallery"
        android:layout_height="170dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_select_for_process"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/color_accent"
            android:text="@string/dialog_run_algorithm"
            android:textAllCaps="false"
            android:textColor="@color/color_icons"
            />

        <Button
            android:id="@+id/btn_view_related_images"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_accent"
            android:textColor="@color/color_icons"
            android:layout_weight="2"
            android:text="@string/dialog_view"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btn_cancel_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/color_accent"
            android:text="@string/dialog_close"
            android:textAllCaps="false"
            android:textColor="@color/color_icons"
            />
    </LinearLayout>

</LinearLayout>