<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.swyam.remoteimageprocessing.NewProcessActivity"
    tools:showIn="@layout/activity_new_process">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="2dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_start_camera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/process_camera"
                    android:textAllCaps="false"
                    android:textSize="25sp"
                    android:textColor="@color/color_icons"
                    />


                <LinearLayout
                    android:background="@drawable/shape"
                    android:layout_margin="5dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.5"
                        android:text="@string/process_more_options_image"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        />

                    <Spinner
                        android:id="@+id/spinner_list_options_image"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.5"
                        android:drawSelectorOnTop="true"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/shape"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/standard_algorithm"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            />

                        <Spinner
                            android:id="@+id/spinner_list_algorithms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/standard_saved_params"
                            android:textAlignment="center"
                            android:textSize="15sp"
                            />

                        <TextView
                            android:id="@+id/text_view_label_params"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="---"
                            android:textAlignment="center"
                            />

                        <Switch
                            android:id="@+id/switch_have_base"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/process_image_with_ellipse_base"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btn_change_params"
                            android:background="@drawable/custom_button"
                            android:textColor="@color/color_icons"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/standard_change"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            />
                    </LinearLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/btn_send_to_server"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:text="@string/process_send_image_to_server"
                    android:textAllCaps="false"
                    android:textColor="@color/color_icons"
                    android:textSize="30sp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:background="@color/cardview_dark_background" />

                <TextView
                    android:id="@+id/text_view_file_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_marginTop="3dp"
                    android:textAlignment="center"
                    android:text="@string/process_image_preview"/>

                <ImageView
                    android:id="@+id/image_view_preview_thumb"
                    android:src="@mipmap/ic_clientserver"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>
